--- a/Dockerfile-build
+++ b/Dockerfile-build
@@ -1,7 +1,7 @@
 FROM golang:1.18.1-bullseye
 
-RUN	mkdir -p /project
-CMD	cp -r /input/gomodifytags /project && \
-	cd /project/gomodifytags && \
+CMD	cp -r /input /gomodifytags && \
+	cd /gomodifytags && \
+	ls /gomodifytags && \
 	go build . && \
-	cp gomodifytags /output
+	cp ./gomodifytags /output
